@@ -28,7 +28,7 @@
 <tr><td class='optBoxItem'>Forced:</td><td><b><input type='checkbox' name='force_notification'[% IF c.config.cmd_defaults.force_notification %] checked[% END %]></b></td></tr>
 <tr><td class='optBoxItem'>Broadcast:</td><td><b><input type='checkbox' name='broadcast_notification'[% IF c.config.cmd_defaults.broadcast_notification %] checked[% END %]></b></td></tr>
 <tr><td class='optBoxRequiredItem'>Author (Your Name):</td><td><b><input type='text' name='com_author' value='[% comment_author %]'[% IF c.config.cgi_cfg.lock_author_names %] readonly disabled[% END %]></b></td></tr>
-<tr><td class='optBoxRequiredItem'>Comment:</td><td><b><input type='text' name='com_data' value='' size= "40"></b></td></tr>
+<tr><td class='optBoxRequiredItem'>Comment:</td><td><textarea name='com_data'></textarea></td></tr>
 
 [% END %]
 [% END %]
