@@ -25,7 +25,7 @@
 <tr><td class='optBoxRequiredItem'>Service:</td><td><b><input type='text' name='service' value='[% c.request.parameters.service %]'></b></td></tr>
 <tr><td class='optBoxItem'>Persistent:</td><td><b><input type='checkbox' name='persistent'[% IF c.config.cmd_defaults.persistent_comments %] checked[% END %]></b></td></tr>
 <tr><td class='optBoxRequiredItem'>Author (Your Name):</td><td><b><input type='text' name='com_author' value='[% comment_author %]'[% IF c.config.cgi_cfg.lock_author_names %] readonly disabled[% END %]></b></td></tr>
-<tr><td class='optBoxRequiredItem'>Comment:</td><td><b><input type='text' name='com_data' value='' size= "40"></b></td></tr>
+<tr><td class='optBoxRequiredItem'>Comment:</td><td><textarea name='com_data'></textarea></td></tr>
 
 [% END %]
 [% END %]
