@@ -36,7 +36,7 @@
 [%# definition of the html form data #%]
 <tr><td class='optBoxRequiredItem'>Host Name:</td><td><b><input type='text' name='host' value='[% c.request.parameters.host %]'></b></td></tr>
 <tr><td class='optBoxRequiredItem'>Author (Your Name):</td><td><b><input type='text' name='com_author' value='[% comment_author %]'[% IF c.config.cgi_cfg.lock_author_names %] readonly disabled[% END %]></b></td></tr>
-<tr><td class='optBoxRequiredItem'>Comment:</td><td><b><input type='text' name='com_data' value='' size= "40"></b></td></tr>
+<tr><td class='optBoxRequiredItem'>Comment:</td><td><textarea name='com_data'></textarea></td></tr>
 <tr><td class='optBoxItem'><br></td></tr>
 <tr><td class='optBoxItem'>Triggered By:</td><td><select name='trigger'><option value='0'> N/A </option>[% FOREACH d = hostdowntimes %]<option value='[% d.id %]'> ID: [% d.id %], Host '[% d.host_name %]' starting @ [% format_date(d.start_time, '%Y-%m-%d %H:%M:%S') %] </option>[% END %][% FOREACH d = servicedowntimes %]<option value='[% d.id %]'> ID: [% d.id %], Service '[% d.service_description %]' on host '[% d.host_name %]' starting @ [% format_date(d.start_time, '%Y-%m-%d %H:%M:%S') %] </option>[% END %]</select></td></tr>
 <tr><td class='optBoxItem'><br></td></tr>
